--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "bull": "^4.16.5",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "moment": "^2.30.1",
+    "mongoose": "^8.9.5",
     "web-vitals": "^4.2.4"
   }
 }
