--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
     "bull": "^4.16.5",
+    "cors": "^2.8.5",
+    "moment": "^2.30.1",
+    "mongoose": "^8.9.5",
+    "uuid": "^11.0.5",
     "web-vitals": "^4.2.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0"
   }
 }
